navbar overflow fix

--- a/styles/base.less
+++ b/styles/base.less
@@ -14,6 +14,7 @@ body {
 
 .navbar {
   position: fixed;
+  width: 100vw !important;
   top: 0px;
   z-index: 5;
   width: 100%;
